feat#update: 添加 Flutter 和 SwiftUI 架构设计及相关分析工具链接

--- a/index.html
+++ b/index.html
@@ -188,6 +188,56 @@
                 <a href="perform_layout_visualization.html" class="card-button">立即体验 →</a>
             </div>
 
+            <!-- Flutter Engine 模块流程图 -->
+            <div class="card" onclick="window.location.href='flutter_engine_mindmap.html'">
+                <div class="card-icon">🧠</div>
+                <div class="card-title">Flutter Engine 模块流程图</div>
+                <div class="card-description">
+                    交互式思维导图，展示 Flutter Engine 的完整架构、模块关系和实现原理。
+                </div>
+                <a href="flutter_engine_mindmap.html" class="card-button">立即体验 →</a>
+            </div>
+
+            <!-- Flutter 架构设计 -->
+            <div class="card" onclick="window.location.href='flutter_architecture_visualization.html'">
+                <div class="card-icon">🏛️</div>
+                <div class="card-title">Flutter 架构设计</div>
+                <div class="card-description">
+                    全面解析 Flutter 的分层架构、三棵树机制、渲染管线、核心设计模式和架构优势。
+                </div>
+                <a href="flutter_architecture_visualization.html" class="card-button">立即体验 →</a>
+            </div>
+
+            <!-- Flutter Framework 架构设计 -->
+            <div class="card" onclick="window.location.href='markdown_viewer.html?file=FLUTTER_FRAMEWORK_ARCHITECTURE.md'">
+                <div class="card-icon">🏗️</div>
+                <div class="card-title">Flutter Framework 架构设计</div>
+                <div class="card-description">
+                    全面解析 Flutter Framework 的架构设计，包括分层设计、核心组件、设计模式和数据流。
+                </div>
+                <a href="markdown_viewer.html?file=FLUTTER_FRAMEWORK_ARCHITECTURE.md" class="card-button">立即阅读 →</a>
+            </div>
+
+            <!-- SwiftUI 架构设计 -->
+            <div class="card" onclick="window.location.href='swiftui_architecture_visualization.html'">
+                <div class="card-icon">🎨</div>
+                <div class="card-title">SwiftUI 架构设计</div>
+                <div class="card-description">
+                    深入理解 SwiftUI 的声明式 UI 范式、数据流、状态管理、渲染引擎和布局系统。
+                </div>
+                <a href="swiftui_architecture_visualization.html" class="card-button">立即体验 →</a>
+            </div>
+
+            <!-- Flutter 语言层面分析 -->
+            <div class="card" onclick="window.location.href='markdown_viewer.html?file=FLUTTER_LANGUAGE_ANALYSIS.md'">
+                <div class="card-icon">🔤</div>
+                <div class="card-title">Flutter 语言层面分析</div>
+                <div class="card-description">
+                    从 Dart 语言角度深入分析 Flutter，理解语言特性如何影响框架设计和性能优化。
+                </div>
+                <a href="markdown_viewer.html?file=FLUTTER_LANGUAGE_ANALYSIS.md" class="card-button">立即阅读 →</a>
+            </div>
+
             <!-- 占位卡片 -->
             <div class="card" style="opacity: 0.6; cursor: not-allowed;">
                 <div class="card-icon">📖</div>
@@ -261,6 +311,48 @@
                     <a href="markdown_viewer.html?file=CONSTRAINED_BOX_ENFORCE_DESIGN.md" class="docs-link">
                         <span>🔧</span>
                         <span>设计原理 - 为什么 ConstrainedBox 使用 enforce()</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="flutter_engine_mindmap.html" class="docs-link">
+                        <span>🧠</span>
+                        <span>在线工具 - Flutter Engine 模块流程图（思维导图）</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="flutter_architecture_visualization.html" class="docs-link">
+                        <span>🏛️</span>
+                        <span>在线工具 - Flutter 架构设计可视化</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=FLUTTER_ARCHITECTURE_DESIGN.md" class="docs-link">
+                        <span>📖</span>
+                        <span>详细文档 - Flutter 架构设计详解</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=FLUTTER_FRAMEWORK_ARCHITECTURE.md" class="docs-link">
+                        <span>🏗️</span>
+                        <span>架构设计 - Flutter Framework 架构设计详解</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="swiftui_architecture_visualization.html" class="docs-link">
+                        <span>🎨</span>
+                        <span>在线工具 - SwiftUI 架构设计可视化</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=SWIFTUI_ARCHITECTURE_DESIGN.md" class="docs-link">
+                        <span>📱</span>
+                        <span>架构设计 - SwiftUI 架构设计详解</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=FLUTTER_LANGUAGE_ANALYSIS.md" class="docs-link">
+                        <span>🔤</span>
+                        <span>语言分析 - Flutter 语言层面深度分析</span>
                     </a>
                 </li>
                 <li>
