refactor: 格式化 CORS 提示部分的 HTML 结构，提升可读性

--- a/index.html
+++ b/index.html
@@ -159,17 +159,23 @@
         </div>
 
         <!-- CORS 提示（仅在 file:// 协议下显示） -->
-        <div id="cors-warning" style="display: none; background: #fff3cd; border-left: 4px solid #ffc107; padding: 20px; border-radius: 12px; margin-bottom: 30px;">
+        <div id="cors-warning"
+            style="display: none; background: #fff3cd; border-left: 4px solid #ffc107; padding: 20px; border-radius: 12px; margin-bottom: 30px;">
             <h3 style="color: #856404; margin-bottom: 10px;">⚠️ 遇到 CORS 错误或文件无法加载？</h3>
             <p style="color: #856404; margin-bottom: 15px;">
                 请使用本地服务器查看文档。在终端执行：
             </p>
-            <div style="background: #2d2d2d; color: #f8f8f2; padding: 15px; border-radius: 8px; font-family: Monaco, monospace; margin-bottom: 15px;">
-./start_server.sh
+            <div
+                style="background: #2d2d2d; color: #f8f8f2; padding: 15px; border-radius: 8px; font-family: Monaco, monospace; margin-bottom: 15px;">
+                ./start_server.sh
             </div>
             <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                <a href="HOW_TO_VIEW.md" style="display: inline-block; background: #ffc107; color: #856404; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: 500;">📖 查看详细说明</a>
-                <a href="CORS_ERROR_HELP.html" style="display: inline-block; background: #ffc107; color: #856404; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: 500;">🆘 获取帮助</a>
+                <a href="HOW_TO_VIEW.md"
+                    style="display: inline-block; background: #ffc107; color: #856404; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: 500;">📖
+                    查看详细说明</a>
+                <a href="CORS_ERROR_HELP.html"
+                    style="display: inline-block; background: #ffc107; color: #856404; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: 500;">🆘
+                    获取帮助</a>
             </div>
         </div>
 
