feat: 添加 Flutter Widgets 完整目录和 setState 深度解析链接，更新启动脚本以处理端口占用

--- a/index.html
+++ b/index.html
@@ -262,6 +262,26 @@
                 <a href="markdown_viewer.html?file=FLUTTER_LANGUAGE_ANALYSIS.md" class="card-button">立即阅读 →</a>
             </div>
 
+            <!-- Flutter Widgets 完整目录 -->
+            <div class="card" onclick="window.location.href='markdown_viewer.html?file=FLUTTER_WIDGETS_CATALOG.md'">
+                <div class="card-icon">🧩</div>
+                <div class="card-title">Flutter Widgets 完整目录</div>
+                <div class="card-description">
+                    380+ Flutter Widgets 系统化分类目录，按功能、使用频率和场景组织，快速查找所需组件。
+                </div>
+                <a href="markdown_viewer.html?file=FLUTTER_WIDGETS_CATALOG.md" class="card-button">立即查看 →</a>
+            </div>
+
+            <!-- Flutter setState 深度解析 -->
+            <div class="card" onclick="window.location.href='markdown_viewer.html?file=FLUTTER_SETSTATE_DEEP_DIVE.md'">
+                <div class="card-icon">🔄</div>
+                <div class="card-title">Flutter setState 深度解析</div>
+                <div class="card-description">
+                    从源码层面深入解析 setState 执行流程、三棵树变化、性能优化和最佳实践。
+                </div>
+                <a href="markdown_viewer.html?file=FLUTTER_SETSTATE_DEEP_DIVE.md" class="card-button">立即阅读 →</a>
+            </div>
+
             <!-- Cursor CodeLens 快速参考 -->
             <div class="card" onclick="window.location.href='cursor_codelens_reference.html'">
                 <div class="card-icon">⌨️</div>
@@ -397,6 +417,18 @@
                     <a href="markdown_viewer.html?file=FLUTTER_LANGUAGE_ANALYSIS.md" class="docs-link">
                         <span>🔤</span>
                         <span>语言分析 - Flutter 语言层面深度分析</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=FLUTTER_WIDGETS_CATALOG.md" class="docs-link">
+                        <span>🧩</span>
+                        <span>Widget 目录 - Flutter Widgets 完整目录 (380+)</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="markdown_viewer.html?file=FLUTTER_SETSTATE_DEEP_DIVE.md" class="docs-link">
+                        <span>🔄</span>
+                        <span>源码分析 - Flutter setState 深度解析</span>
                     </a>
                 </li>
                 <li>
